kubernetes/apps/adguard-home/adguard-home/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-home-origin-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "AdGuard Home"
    homepage.shamubernetes.com/description: "DNS filtering and network protection"
    homepage.shamubernetes.com/group: "Home"
    homepage.shamubernetes.com/order: "20"
    homepage.shamubernetes.com/favorite: "false"
    homepage.shamubernetes.com/icon: "dashboard-icons:adguard-home"
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "adguard.${HOME_DOMAIN}"
  rules:
  - backendRefs:
    - name: adguard-home-origin
      port: 3000
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-home-secondary-envoy
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "adguard-secondary.${HOME_DOMAIN}"
  rules:
  - backendRefs:
    - name: adguard-home-secondary
      port: 3000
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-home-tertiary-envoy
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "adguard-tertiary.${HOME_DOMAIN}"
  rules:
  - backendRefs:
    - name: adguard-home-tertiary
      port: 3000
